feat: implement initial GN mobile application including core features, data models, UI screens, navigation, and build configurations.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,55 @@
 <resources>
     <string name="app_name">GNApp</string>
+    <string name="login">Login</string>
+    <string name="register">Register</string>
+    <string name="nic">NIC Number</string>
+    <string name="password">Password</string>
+    <string name="dashboard">Dashboard</string>
+    <string name="citizens">Citizens</string>
+    <string name="households">Households</string>
+    <string name="requests">Requests</string>
+    <string name="profile">Profile</string>
+    <string name="add_citizen">Add Citizen</string>
+    <string name="edit_citizen">Edit Citizen</string>
+    <string name="full_name">Full Name</string>
+    <string name="dob">Date of Birth</string>
+    <string name="gender">Gender</string>
+    <string name="occupation">Occupation</string>
+    <string name="address">Address</string>
+    <string name="contact_number">Contact Number</string>
+    <string name="notes">Notes</string>
+    <string name="save">Save</string>
+    <string name="cancel">Cancel</string>
+    <string name="delete">Delete</string>
+    <string name="household_id">Household ID</string>
+    <string name="members_count">Members Count</string>
+    <string name="remarks">Remarks</string>
+    <string name="request_type">Request Type</string>
+    <string name="purpose">Purpose</string>
+    <string name="description">Description</string>
+    <string name="status">Status</string>
+    <string name="pending">Pending</string>
+    <string name="approved">Approved</string>
+    <string name="rejected">Rejected</string>
+    <string name="search_citizen">Search Citizens</string>
+    <string name="search_household">Search Households</string>
+    <string name="search_request">Search Requests</string>
+    <string name="search_placeholder">Search here...</string>
+    <string name="no_data_found">No data found</string>
+    <string name="add_new">Add New</string>
+    <string name="details">Details</string>
+    <string name="submitted_on">Submitted on</string>
+    <string name="gn_division">GN Division</string>
+    <string name="approval_notes">Approval Notes</string>
+    <string name="document_path">Document Path</string>
+    <string name="officer_title">Grama Niladhari Officer</string>
+    <string name="office_address">Office Address</string>
+    <string name="account_settings">Account Settings</string>
+    <string name="edit_profile_info">Edit Profile Info</string>
+    <string name="edit_profile_subtitle">Update your personal details</string>
+    <string name="security">Security</string>
+    <string name="security_subtitle">Manage password and authentication</string>
+    <string name="logout_system">Logout from System</string>
+    <string name="system_notifications">System Notifications</string>
+    <string name="notifications">Notifications</string>
 </resources>
